add content provider to access data base and provider tests.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,4 +30,10 @@
         </activity>
     </application>
 
+    <provider android:name="WNContentProvider"
+        android:authorities="com.laurietrichet.whatsnew.contentprovider"
+        android:exported="false">
+        <grant-uri-permission android:pathPattern=".*" />
+    </provider>
+
 </manifest>
