--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'jacoco'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.0.1"
+    compileSdkVersion 22
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         applicationId "com.laurietrichet.whatsnew"
-        minSdkVersion 10
-        targetSdkVersion 21
+        minSdkVersion 15
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
@@ -63,10 +63,10 @@ task jacocoTestReport(type: JacocoReport, dependsOn: "testDebug") {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.0'
-    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.mcxiaoke.volley:library:1.0.7@aar'
-    compile 'com.android.support:support-v4:21.0.0'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
     androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
     androidTestCompile ('com.jakewharton.espresso:espresso-support-v4:1.1-r3'){
         exclude group:'com.android.support'
