--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testHandleProfiling true
         testFunctionalTest true
     }
@@ -64,11 +64,14 @@ task jacocoTestReport(type: JacocoReport, dependsOn: "testDebug") {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.mcxiaoke.volley:library:1.0.7@aar'
     compile 'com.android.support:support-v4:22.2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    androidTestCompile 'com.jakewharton.espresso:espresso:1.1-r3'
-    androidTestCompile ('com.jakewharton.espresso:espresso-support-v4:1.1-r3'){
-        exclude group:'com.android.support'
-    }
+    compile 'com.squareup.retrofit:converter-simplexml:1.9.0'
+
+    // App's dependencies, including test
+    compile 'com.android.support:support-annotations:22.2.0'
+
+    // Testing-only dependencies
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
+    androidTestCompile 'com.android.support.test:runner:0.3'
 }
