--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,10 +63,13 @@ task jacocoTestReport(type: JacocoReport, dependsOn: "testDebug") {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
+    compile 'com.android.support:support-v4:22.2.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.retrofit:converter-simplexml:1.9.0'
+    compile 'com.squareup:otto:1.3.8'
+    compile 'com.facebook.stetho:stetho:1.1.1'
+    compile 'com.facebook.stetho:stetho-okhttp:1.1.1'
 
     // App's dependencies, including test
     compile 'com.android.support:support-annotations:22.2.0'
