--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,6 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testHandleProfiling true
         testFunctionalTest true
     }
@@ -63,7 +62,11 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp:1.1.1'
 
     // Testing-only dependencies
-    compile 'com.squareup.retrofit:converter-simplexml:2.0.0-beta2'
+    compile ('com.squareup.retrofit:converter-simplexml:2.0.0-beta2'){
+        exclude group: 'xpp3', module: 'xpp3'
+        exclude group: 'stax', module: 'stax-api'
+        exclude group: 'stax', module: 'stax'
+    }
 
 // Android JUnit Runner
     androidTestCompile 'com.android.support.test:runner:0.4.1'
